cssshadowvalue: don't apply the y_scale offset twice to the shadow

As per commit 942e904 this changed causing a regression that
seems to be visible only when scale > 2.

https://bugzilla.gnome.org/show_bug.cgi?id=791363